@@ -153,6 +153,13 @@ Example    : \n\r\
 Description: \n\r\
 Lowers constitution and strength, and creates damaging stomach aches.
 
+POISON_SICKENING=\
+Ability    : Sickening\n\r\
+Parameters : \n\r\
+Example    : \n\r\
+Description: \n\r\
+Causes puking.
+
 POISON_SLUMBERALL=\
 Ability    : Slumberall\n\r\
 Parameters : \n\r\
